<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LostPetLocationActivity" >
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/PickLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="#80000000"
                android:textColor="@android:color/white"
                android:text="@string/continueStr"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:background="@drawable/back"
                android:textColor="@android:color/white"
                android:text="@string/where_was_pet_lost"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </fragment>
    </LinearLayout>


    <LinearLayout
    android:id="@+id/infoField"
    android:layout_width="match_parent"
    android:layout_height = "wrap_content"
    android:layout_weight="1.0"
    android:orientation="vertical"
    android:visibility="gone"
    android:background="@android:color/white">
        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_location_of_lost_pet"/>

    </LinearLayout>
</LinearLayout>